--- a/index.html
+++ b/index.html
@@ -49,14 +49,7 @@
             </div>
             <div class="div">
               <select name="select" id="select">
-                <option
-                  class="option"
-                  value="all"
-                  onchange="refresh()"
-                  selected
-                >
-                  All
-                </option>
+                <option class="option" value="all" selected>All</option>
                 <option class="option" value="Africa">Africa</option>
                 <option class="option" value="Americas">America</option>
                 <option class="option" value="Asia">Asia</option>
